# mangoware

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mango.hpp  no.h
include/mango/: camera.hpp  engine.hpp  scancode.hpp  scene.hpp  sprite.hpp  tilemap.hpp  types.hpp
src/: camera.cc  engine.cc  input.cc  main.cc  shared.h  sprite.cc  system.cc  tilemap.cc
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/backend/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
